feat: remove monthend worklist
